2009-05-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Arek

	* flumotion/admin/gtk/overlaystep.py:
	* flumotion/component/converters/overlay/genimg.py:
	* flumotion/component/converters/overlay/overlay.py:
	Make overlay use appsrc or a python src element if appsrc is
	not available.
	Fixes #1275

2009-04-30  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/feedcomponent010.py:
	Drop all newsegment events except the first one in the gdp
	depayloader. Some components have problems when they see a second
	newsegment event coming in and Flumotion does not deal with newsegments
	in any special way anyway.
	Fixes #1278.
	See also #1277.

2009-04-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  Show a list of allowed sockets when the socket type is
	  unsupported.

2009-04-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Allow some feeders to be in pipeline, outputting a warning
	log message if it happens.
	Needed for single stream playlist producer to continue
	functioning.
	* flumotion/component/producers/playlist/playlistparser.py:
	Set discoveredDuration to be correct when there is no
	video or no audio in media file.

2009-04-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py:
	Subtract basetime from timestamp when adjusting gnlsources.

2009-04-23  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fixed a dependency of python2.5 checking ips.
	Fallback to get always video and audio mime types.

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Back to dev.

=== release 0.5.4 ===

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.5.4 "EAT".

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py: